# interview_tasks

./: .gitignore
data_integration_engineer/smart-data-service/: README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  smart_data_publisher.py
data_integration_engineer/smart-data-service/docker/administrator/: Dockerfile  requirements.txt
data_integration_engineer/smart-data-service/docker/api/: Dockerfile  requirements.txt
data_integration_engineer/smart-data-service/postgres/: init.sql
data_integration_engineer/smart-data-service/rabbitmq/: definitions.json
data_integration_engineer/smart-data-service/src/smart_data_service/: __init__.py  administrator.py  config.py  db_operations.py  messaging.py  models.py  rest_api.py  schemas.py
data_integration_engineer/smart-data-service/tests/unit/: test_smart_data_service.py
